# hindsight

./: README.md
.github/workflows/: deploy-docs.yml  release.yml
docker/standalone/: Dockerfile
helm/hindsight/: Chart.yaml
hindsight/: pyproject.toml
hindsight-api/: pyproject.toml
hindsight-api/hindsight_api/: config.py  mcp_local.py  pg0.py
hindsight-api/hindsight_api/api/: http.py  mcp.py
hindsight-api/hindsight_api/engine/: entity_resolver.py  llm_wrapper.py  memory_engine.py  response_models.py
hindsight-api/hindsight_api/engine/retain/: fact_extraction.py  link_creation.py  link_utils.py  observation_regeneration.py  orchestrator.py
hindsight-api/tests/: test_chunking.py  test_fact_extraction_quality.py  test_http_api_integration.py  test_mcp_api_integration.py  test_mcp_local.py  test_mcp_routing.py
hindsight-cli/: Cargo.toml
hindsight-cli/src/: main.rs
hindsight-clients/python/: pyproject.toml
hindsight-clients/typescript/: package.json
hindsight-control-plane/: package-lock.json  package.json
hindsight-control-plane/src/app/banks/[bankId]/: page.tsx
hindsight-control-plane/src/components/: bank-profile-view.tsx  data-view.tsx  search-debug-view.tsx  think-view.tsx
hindsight-control-plane/src/lib/: hindsight-client.ts
hindsight-dev/: pyproject.toml
hindsight-dev/benchmarks/common/: benchmark_runner.py
hindsight-dev/benchmarks/longmemeval/: longmemeval_benchmark.py
hindsight-docs/docs/developer/: retain.md  retrieval.md
hindsight-docs/docs/developer/api/: opinions.md  recall.md
hindsight-docs/docs/sdks/: python.md
hindsight-docs/docs/sdks/integrations/: local-mcp.md
hindsight-integrations/litellm/: pyproject.toml
