[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hindsight-dev"
version = "0.1.11"
description = "Development utilities for Hindsight"
requires-python = ">=3.11"
dependencies = [
    "hindsight-api",
    "python-fasthtml>=0.12.33",
    "streamlit>=1.51.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hindsight_dev", "benchmarks"]

[tool.uv.sources]
hindsight-api = { workspace = true }

[project.scripts]
generate-openapi = "hindsight_dev.generate_openapi:generate_openapi_spec"
generate-changelog = "hindsight_dev.generate_changelog:main"
sync-cookbook = "hindsight_dev.sync_cookbook:main"
generate-llms-full = "hindsight_dev.generate_llms_full:main"
